Options with invalid values are incorrectly treated as obsolete and ignored

XMLWordPrintable

    • b34

      TEST FAILED: Error processing option DeferPollingPageLoopCount with invalid value '-server -XX:+UseG1GC -XX:DeferPollingPageLoopCount=-2'! JVM successfully exit
      stdout content[Java start-up!
      ]
      stderr content[Java HotSpot(TM) 64-Bit Server VM warning: Option DeferPollingPageLoopCount was deprecated in version 10.0 and will likely be removed in a future release.
      intx DeferPollingPageLoopCount=-2 is outside the allowed range [ -1 ... 2147483646 ]
      Java HotSpot(TM) 64-Bit Server VM warning: Ignoring option DeferPollingPageLoopCount; support was removed in 11.0
      ]

      TEST FAILED: Error processing option DeferPollingPageLoopCount with invalid value '-server -XX:+UseG1GC -XX:DeferPollingPageLoopCount=2147483647'! JVM successfully exit
      stdout content[Java start-up!
      ]
      stderr content[Java HotSpot(TM) 64-Bit Server VM warning: Option DeferPollingPageLoopCount was deprecated in version 10.0 and will likely be removed in a future release.
      intx DeferPollingPageLoopCount=2147483647 is outside the allowed range [ -1 ... 2147483646 ]
      Java HotSpot(TM) 64-Bit Server VM warning: Ignoring option DeferPollingPageLoopCount; support was removed in 11.0
      ]

      TEST FAILED: Error processing option DeferThrSuspendLoopCount with invalid value '-server -XX:+UseG1GC -XX:DeferThrSuspendLoopCount=-2'! JVM successfully exit
      stdout content[Java start-up!
      ]
      stderr content[Java HotSpot(TM) 64-Bit Server VM warning: Option DeferThrSuspendLoopCount was deprecated in version 10.0 and will likely be removed in a future release.
      intx DeferThrSuspendLoopCount=-2 is outside the allowed range [ -1 ... 2147483646 ]
      Java HotSpot(TM) 64-Bit Server VM warning: Ignoring option DeferThrSuspendLoopCount; support was removed in 11.0
      ]

      TEST FAILED: Error processing option DeferThrSuspendLoopCount with invalid value '-server -XX:+UseG1GC -XX:DeferThrSuspendLoopCount=2147483647'! JVM successfully exit
      stdout content[Java start-up!
      ]
      stderr content[Java HotSpot(TM) 64-Bit Server VM warning: Option DeferThrSuspendLoopCount was deprecated in version 10.0 and will likely be removed in a future release.
      intx DeferThrSuspendLoopCount=2147483647 is outside the allowed range [ -1 ... 2147483646 ]
      Java HotSpot(TM) 64-Bit Server VM warning: Ignoring option DeferThrSuspendLoopCount; support was removed in 11.0
      ]

      TEST FAILED: Error processing option SafepointSpinBeforeYield with invalid value '-server -XX:+UseG1GC -XX:SafepointSpinBeforeYield=-1'! JVM successfully exit
      stdout content[Java start-up!
      ]
      stderr content[Java HotSpot(TM) 64-Bit Server VM warning: Option SafepointSpinBeforeYield was deprecated in version 10.0 and will likely be removed in a future release.
      intx SafepointSpinBeforeYield=-1 is outside the allowed range [ 0 ... 9223372036854775807 ]
      Java HotSpot(TM) 64-Bit Server VM warning: Ignoring option SafepointSpinBeforeYield; support was removed in 11.0

            Assignee:
            Robbin Ehn
            Reporter:
            Jesper Wilhelmsson
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: