8191707: Options with invalid values are incorrectly treated as obsolete and ignored

Reviewed-by: rehn, dcubed